--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <body>
     <h1>Juan Eduardo Zorrilla Chavez</h1>
     <h2>Tengo 18 años, Termine mi etapa lectiva en el CTMA Sena pero no he podido encontrar patrocinio en para mi etapa lectiva, Se ingles, me gusta desarmar cosas y ver como funcionan por dentro, tambien me gustan los juegos y aprender idiomas, en especial el Ingles </h2>
-    <h3>Links: </h3>
-    <h4> 
-        <a href="https://github.com/HeroLeni">github</a>
-        <a href="https://github.com/HeroLeni/PythonMizushima">Repositorio</a>
-    </h4>
+<h3>Links:</h3>
+<ul>
+    <li><a href="https://github.com/HeroLeni">GitHub</a></li>
+    <li><a href="https://github.com/HeroLeni/10exersisesinpython">10 ejercicios</a></li>
+    <li><a href="https://github.com/HeroLeni/EcoGreenCItyBicicletas">EcoGreenCItyBicicletas</a></li>
+</ul>
+
 </body>
+
 </html>
