Add new link to inventory in index.html
Added a new link to 'Inventario de productos' in the list.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <li><a href="https://github.com/HeroLeni">GitHub</a></li>
     <li><a href="https://github.com/HeroLeni/10exersisesinpython">10 ejercicios</a></li>
     <li><a href="https://github.com/HeroLeni/EcoGreenCItyBicicletas">EcoGreenCItyBicicletas</a></li>
+    <li><a href="https://github.com/HeroLeni/inventariopython">Inventario de productos</a></li>
 </ul>
 
 </body>
 
 </html>
+
