Revamp index.html to create a portfolio layout
Updated the HTML structure to create a portfolio page with personal information, interests, and project links.

--- a/index.html
+++ b/index.html
@@ -3,20 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio - Juan Eduardo Zorrilla</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Juan Eduardo Zorrilla Chavez</h1>
-    <h2>Tengo 18 años, Termine mi etapa lectiva en el CTMA Sena pero no he podido encontrar patrocinio en para mi etapa lectiva, Se ingles, me gusta desarmar cosas y ver como funcionan por dentro, tambien me gustan los juegos y aprender idiomas, en especial el Ingles </h2>
-<h3>Links:</h3>
-<ul>
-    <li><a href="https://github.com/HeroLeni">GitHub</a></li>
-    <li><a href="https://github.com/HeroLeni/10exersisesinpython">10 ejercicios</a></li>
-    <li><a href="https://github.com/HeroLeni/EcoGreenCItyBicicletas">EcoGreenCItyBicicletas</a></li>
-    <li><a href="https://github.com/HeroLeni/inventariopython">Inventario de productos</a></li>
-</ul>
-
+    <div class="container">
+        <h1>Juan Eduardo Zorrilla Chavez</h1>
+        
+        <table class="styled-table">
+            <thead>
+                <tr>
+                    <th>Información Personal</th>
+                    <th>Detalles</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Edad</td>
+                    <td>18 años</td>
+                </tr>
+                <tr>
+                    <td>Formación</td>
+                    <td>Terminé mi etapa lectiva en el CTMA Sena (buscando patrocinio para etapa práctica)</td>
+                </tr>
+                <tr>
+                    <td>Idiomas</td>
+                    <td>Español (nativo), Inglés</td>
+                </tr>
+                <tr>
+                    <td>Intereses</td>
+                    <td>Desarmar cosas y ver cómo funcionan, juegos, aprender idiomas</td>
+                </tr>
+                <tr>
+                    <td>GitHub Principal</td>
+                    <td><a href="https://github.com/HeroLeni">HeroLeni</a></td>
+                </tr>
+                <tr>
+                    <td>Proyecto 1</td>
+                    <td><a href="https://github.com/HeroLeni/10exersisesinpython">10 ejercicios en Python</a></td>
+                </tr>
+                <tr>
+                    <td>Proyecto 2</td>
+                    <td><a href="https://github.com/HeroLeni/EcoGreenCItyBicicletas">EcoGreenCity Bicicletas</a></td>
+                </tr>
+                <tr class="active-row">
+                    <td>Proyecto 3</td>
+                    <td><a href="https://github.com/HeroLeni/inventariopython">Inventario de productos</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
-
 </html>
 
