Modify portfolio with new project details
Updated project links and added a new project.

--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
                 </tr>
                 <tr class="active-row">
                     <td>Proyecto 3</td>
-                    <td><a href="https://github.com/HeroLeni/inventariopython">Inventario de productos</a></td>
+                    <td><a href="https://github.com/HeroLeni/Estructuras-de-Datos-en-Python">Estructura de datos en Python</a></td>
                 </tr>
             </tbody>
         </table>
     </div>
 </body>
 </html>
+
 
 
