--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio - Juan Eduardo Zorrilla</title>
     <link rel="stylesheet" href="styles.css">
+    <img src="jingliu-honkai-star-rail.jpg" alt="">
 </head>
 <body>
     <div class="container">
@@ -55,6 +56,7 @@
     </div>
 </body>
 </html>
+
 
 
 
