Refactor index.html structure and add image center

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio - Juan Eduardo Zorrilla</title>
     <link rel="stylesheet" href="styles.css">
-    <img src="jingliu-honkai-star-rail.jpg" alt="">
 </head>
 <body>
     <div class="container">
+        <div class="img-center">
+            <img src="jingliu-honkai-star-rail.jpg" alt="Jingliu Honkai Star Rail">
+        </div>
         <h1>Juan Eduardo Zorrilla Chavez</h1>
-        
         <table class="styled-table">
             <thead>
                 <tr>
@@ -56,7 +57,3 @@
     </div>
 </body>
 </html>
-
-
-
-
