--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio - Juan Eduardo Zorrilla</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <div class="container">
         <div class="img-center">
-            <img src="jingliu-honkai-star-rail.jpg" alt="Jingliu Honkai Star Rail">
+            <img src="jingliu-honkai-star-rail.jpg" alt="Jingliu Honkai Star Rail" />
         </div>
         <h1>Juan Eduardo Zorrilla Chavez</h1>
         <table class="styled-table">
